# cpp-starter

./: .cmake-format  CMakeLists.txt  CMakePresets.json
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
cmake/: FetchCC.cmake  common.cmake  cpm.cmake
src/: log.cpp  log.h  main.cpp  pch.h  stdafx.h
